--- a/phonegap-android/AndroidManifest.xml
+++ b/phonegap-android/AndroidManifest.xml
@@ -23,8 +23,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />   
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
+    <!--
     <application android:icon="@drawable/icon" android:label="@string/app_name"
     	android:debuggable="true">
+    	-->
+    	<application android:icon="@drawable/icon" android:label="@string/app_name"
+    	android:debuggable="false">
         <activity android:name=".FitbitMini"
                   android:label="@string/app_name" android:configChanges="orientation|keyboardHidden">
             <intent-filter>
