--- a/phonegap-android/AndroidManifest.xml
+++ b/phonegap-android/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.mayerdan.fitbitmini" android:versionName="1.8" android:versionCode="6">
+      package="com.mayerdan.fitbitmini" android:versionName="1.8" android:versionCode="6"
+      android:installLocation="auto">
     <supports-screens
     	android:largeScreens="true"
     	android:normalScreens="true"
